add new work and modify old files

--- a/script/notes.ipynb
+++ b/script/notes.ipynb
@@ -625,7 +625,7 @@
     "\n",
     "def get_json_to_dict(url):\n",
     "    r = requests.get(url, auth=('user', 'pass')) # Basic Auth\n",
-    "    data = json.loads(r.text)\n",
+    "    data = json.loads(r.text) # get a dict obj\n",
     "    _ans = data['items']\n",
     "    return _ans"
    ]
@@ -635,7 +635,7 @@
    "id": "fbaecdf5",
    "metadata": {},
    "source": [
-    "- Transform string json to dict???"
+    "- Transform string **json to dict**: it depends on your json response, maybe its no match of key and value in raw json. So you only get very long string. "
    ]
   },
   {
