add dalao file and update new file

--- a/script/notes.ipynb
+++ b/script/notes.ipynb
@@ -419,17 +419,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "18c6c1f0",
+   "execution_count": 1,
+   "id": "14d6b695",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<re.Match object; span=(21, 290), match='\"message\": \"9a5ab695d17c3b3271ef48e825a5a52114acf>\n",
+      "(21, 290)\n",
+      "21\n",
+      "290\n",
       "\"message\": \"9a5ab695d17c3b3271ef48e825a5a52114acfecc92094986ee0ae761d9e33ed712642d6b1647434b493b850d4237cb20be2b0f7cd456d51f88f62bd82ae37518d2baae7570c49c6f59a8051c7e42e5a0395be18da9a39ccc198a8df90129cebf49373c11d9823e24f47b609b56088f039c5a1b120874822fdffa21102430a834\"\n",
       "message\n",
-      "9a5ab695d17c3b3271ef48e825a5a52114acfecc92094986ee0ae761d9e33ed712642d6b1647434b493b850d4237cb20be2b0f7cd456d51f88f62bd82ae37518d2baae7570c49c6f59a8051c7e42e5a0395be18da9a39ccc198a8df90129cebf49373c11d9823e24f47b609b56088f039c5a1b120874822fdffa21102430a834\n"
+      "9a5ab695d17c3b3271ef48e825a5a52114acfecc92094986ee0ae761d9e33ed712642d6b1647434b493b850d4237cb20be2b0f7cd456d51f88f62bd82ae37518d2baae7570c49c6f59a8051c7e42e5a0395be18da9a39ccc198a8df90129cebf49373c11d9823e24f47b609b56088f039c5a1b120874822fdffa21102430a834\n",
+      "None\n",
+      "<re.Match object; span=(0, 290), match='{\"is_success\": true, \"message\": \"9a5ab695d17c3b32>\n"
      ]
     }
    ],
@@ -438,7 +444,7 @@
     "target= '{\"is_success\": true, \"message\": \"9a5ab695d17c3b3271ef48e825a5a52114acfecc92094986ee0ae761d9e33ed712642d6b1647434b493b850d4237cb20be2b0f7cd456d51f88f62bd82ae37518d2baae7570c49c6f59a8051c7e42e5a0395be18da9a39ccc198a8df90129cebf49373c11d9823e24f47b609b56088f039c5a1b120874822fdffa21102430a834\"}'\n",
     "\n",
     "m =re.search(r'\"(message)\": \"(.*)?\"', target)\n",
-    "print (target[m.start():m.end()])\n",
+    "print(target[m.start():m.end()])\n",
     "print(m.group(1)) # notice don not use group[1]\n",
     "print(m.group(2))"
    ]
