add finished work of gomoku and add bat script in windows

--- a/script/notes.ipynb
+++ b/script/notes.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e69d6db2",
    "metadata": {},
    "source": [
     "# Code Crepper"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97283cb5",
    "metadata": {},
    "source": [
     "I'll put some code (cells)examples in here insteaded of to Gist. This are much better. It could use Cpp/Python/Java and more probablly. I used to get some help in following links, wish next time I don't need to refer to them.\n",
@@ -28,7 +26,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a240820",
    "metadata": {},
    "source": [
     "- main function: https://blog.konghy.cn/2017/04/24/python-entry-program/"
@@ -36,7 +33,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67069bf0",
    "metadata": {},
    "source": [
     "## Judge"
@@ -44,7 +40,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2211386",
    "metadata": {},
    "source": [
     "### 判断是不是二进制文件"
@@ -53,7 +48,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "50eafff1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +62,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "386e7c0a",
    "metadata": {},
    "source": [
     "## Convertion"
@@ -77,7 +70,6 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "f284ffc4",
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +98,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d25a9f0e",
    "metadata": {},
    "source": [
     "### 普通类型转换\n"
@@ -114,7 +105,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57eb796a",
    "metadata": {},
    "source": [
     "## String In Python"
@@ -122,7 +112,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38c711a0",
    "metadata": {},
    "source": [
     "Wolk 目录的格式注意: Py的默认编码是 Unicode, 所以需要加字符 **r**, 否则将报`(unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape [duplicate] <generator object walk at 0x7f067f9a9820>`. 正确下写法如: `os.walk(r'/mnt/c/Users/15517/Pictures/pic')`. Alos have other char:\n",
@@ -139,7 +128,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9862a6ca",
    "metadata": {},
    "source": [
     "## List"
@@ -147,7 +135,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e20d2e03",
    "metadata": {},
    "source": [
     "- Walk in a list:"
@@ -156,7 +143,6 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "10da73fa",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +167,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7248f2ab",
    "metadata": {},
    "source": [
     "## OS Manage"
@@ -189,7 +174,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f98613d2",
    "metadata": {},
    "source": [
     "- os\n",
@@ -259,7 +243,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9797f3ae",
    "metadata": {},
    "source": [
     "### 遍历本地一级目录"
@@ -267,7 +250,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67b3b8e4",
    "metadata": {},
    "source": [
     "I am run wsl2, so `C:\\Users\\xxx\\Pictures\\pic` is not suitting me. Should use the mount path, such as `/mnt/c/Users/15517/Pictures/pic`."
@@ -276,7 +258,6 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "cdae277b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +276,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8729b655",
    "metadata": {},
    "source": [
     "### 遍历所有文件"
@@ -304,7 +284,6 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "f599acd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +311,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c25dd58",
    "metadata": {},
    "source": [
     "walk all file, so the method is like\n",
@@ -351,7 +329,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "666058b5",
    "metadata": {},
    "source": [
     "### 拿到所有文件名"
@@ -360,7 +337,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "b7bcf414",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +356,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc56dd60",
    "metadata": {},
    "source": [
     "## Print\n",
@@ -391,7 +366,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "91a1ac72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +374,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd002dce",
    "metadata": {},
    "source": [
     "## Re"
@@ -408,7 +381,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6010cc4b",
    "metadata": {},
    "source": [
     "- **crawler**: `re.findall()` is more better. and you should notice the usage of `re.match`.\n",
@@ -420,7 +392,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "14d6b695",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +422,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8287821d",
    "metadata": {},
    "source": [
     "Flag pattern could use \n",
@@ -468,7 +438,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "993fc292",
    "metadata": {},
    "source": [
     "More have `split`, `finditer`, `sub` and `compile`. more see in https://docs.python.org/zh-cn/3/library/re.html"
@@ -476,7 +445,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62c276a6",
    "metadata": {},
    "source": [
     "## Time\n",
@@ -511,7 +479,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b9aaee1",
    "metadata": {},
    "source": [
     "有一次为了避免文件创建的重名问题, 一时方便取巧, 将文件的开头加入今天的时间之后在做重命名, 但是有一个问题, **必须加到毫秒才会安全**, 因为如果最小任务单位制是毫秒级的话, 精确到秒的命名规则就会出现问题. **[FIXME]** 那么如何加毫秒呢???"
@@ -520,7 +487,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ffdf3e6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +496,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fc40d4b",
    "metadata": {},
    "source": [
     "## Requests\n",
@@ -547,7 +512,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "88a9de86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +529,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf2ccb5a",
    "metadata": {},
    "source": [
     "- requests: could use system proxy. or"
@@ -573,7 +536,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12b6d362",
+   "metadata": {},
+   "source": [
+    "requests.request() \t构造一个请求，支持以下各种方法\r\n",
+    "requests.get() \t\t获取html的主要方法\r\n",
+    "requests.head() \t\t获取html头部信息的主要方法\r\n",
+    "requests.post() \t\t向html网页提交post请求的方法\r\n",
+    "requests.put() \t\t向html网页提交put请求的方法\r\n",
+    "requests.patch() \t\t向html提交局部修改的请求\r\n",
+    "requests.delete() \t\t向html提交删除请求"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Re"
@@ -582,7 +557,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a380d298",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +570,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89df0b0c",
    "metadata": {},
    "source": [
     "- auth: authentication, 认证\n",
@@ -605,7 +578,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a7e4f89",
    "metadata": {},
    "source": [
     "## JSON (JavaScript Object Notation)"
@@ -613,7 +585,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cced0804",
    "metadata": {},
    "source": [
     "- **`loads`**\n",
@@ -623,7 +594,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "eaaad6f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +608,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbaecdf5",
    "metadata": {},
    "source": [
     "- Transform string **json to dict**: it depends on your json response, maybe its no match of key and value in raw json. So you only get very long string. "
@@ -647,7 +616,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d1c761b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +632,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b782b1de",
    "metadata": {},
    "source": [
     "## Base64"
@@ -672,7 +639,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b34631e7",
    "metadata": {},
    "source": [
     "### 去掉文件开头的 `b`"
@@ -680,7 +646,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84e10a35",
    "metadata": {},
    "source": [
     "开头的 `b` 表示二进制文件, 解码会发生错误\n",
@@ -693,7 +658,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "e564e7ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +671,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67a01317",
    "metadata": {},
    "source": [
     "## Math"
@@ -715,7 +678,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34e02121",
    "metadata": {},
    "source": [
     "`math.floor()` & `//` is different. While calculating big number, you may be will see the number of `0` is much more, which must be wrong! You could use `hex()` to verify. Cause the floor return is float, is not int, the precision is bad."
@@ -724,7 +686,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7122066d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,25 +695,35 @@
     "    ans.append(chr(target%256))\n",
     "    temp //= 256 # floor, math.floor is wrong... use gex() to verify"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## pyinstaller\r\n",
+    "\r\n",
+    "找到程序位置执行\r\n",
+    "pyinstaller -F xxx.py\r\n",
+    "想去掉黑窗口(命令行窗口)\r\n",
+    "pyinstaller -F -w xxx.py\r\n",
+    "修改图标\r\n",
+    "pyinstaller -F -w -i xx.ico xxx.py\r\n",
+    "http://www.bitbug.net/  图标生成地址\r\n",
+    "注意：打包的文件名最好不是中文的！！\r\n"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "1bfb6be6c5b818c66a48126cbf95a42c47616e1d3f8f5bd5151adf8b7e646658"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
+   "display_name": "Python 3.7.0 64-bit (system)",
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": ""
   }
  },
  "nbformat": 4,
