feat: add Chain of Responsibility

--- a/tasks/design-pattern/src/README
+++ b/tasks/design-pattern/src/README
@@ -25,7 +25,10 @@
 - Behavior
     - Template
     - Iterator
+    - Chain Of Responsibility
+    - Mementor
     - Mediator !!!
     - State
+    -
 
 
