--- a/tasks/design-pattern/src/README
+++ b/tasks/design-pattern/src/README
@@ -1,6 +1,6 @@
 ## Contents
 
-- Create(5)
+- Create(c,5)
     - Singleton
       ![image](https://user-images.githubusercontent.com/57313137/175233696-f5ac6fd0-d63e-4946-901e-b696e81bb004.png)
     - Prototype
@@ -11,7 +11,7 @@
       ![image](https://user-images.githubusercontent.com/57313137/175233928-d2df1cf6-28f9-42d0-bf35-df28b4d9ade9.png)
     - Builder
       ![image](https://user-images.githubusercontent.com/57313137/175233997-ee7c1f58-b2a5-48ab-8ec2-baf36f384ca2.png)
-- Construction (7)
+- Construction (s, 7)
     - Facade
     - Composite
     - Decorator: 如果只有一个ConcreteComponent类而没有抽象的Component类，
@@ -22,13 +22,14 @@
     - Flyweight
     - Proxy
     - Bridge
-- Behavior
+- Behavior(v,)
     - Template
     - Iterator
     - Chain Of Responsibility
+    - Strategy
+    - State
     - Mementor
     - Mediator !!!
-    - State
-    -
+    - Command
 
 
